# deeplearningforrust

./: .gitignore  .project  Cargo.toml  memo.txt  sftp.json
src/: dim.rs  layers.rs  lib.rs  lib_old.rs  main.rs  matrix.rs  time_layers.rs
src/main_mod/: mod.rs
tests/: layers_test.rs  rnn_backward_test.rs  rnn_forward_test.rs  test.rs  timeRNN_test.rs
