[package]
name = "win_target_sample"
version = "0.1.0"
authors = ["kazuha <mami.tomoe4@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.12.1", features = ["blas"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
ndarray-linalg = "*"

